--- a/detail.html
+++ b/detail.html
@@ -52,6 +52,22 @@
 
     </div>
 
+
+    <div class="bottom-window">
+        <div class="bottom-img">
+            <img src="images/logo.png">
+        </div>
+        <div class="bottom-text">
+            <a class="download-app" href="http://www.shunshunliuxue.com/weixin/appdownload/" target="_blank"><h3>点击下载顺顺留学</h3>
+                <h4>新一代人的选择</h4></a>
+        </div>
+        <div class="bottom-x">
+            <a id="main-break" href="javascript:void(0);" onclick="document.getElementsByClassName('bottom-window')[0].style.display='none';">
+                <img id='img' src="http://api.shunshunliuxue.com/static/css/default/img/client/x.png">
+            </a>
+        </div>
+    </div>
+
 </div>
 </body>
 </html>
