--- a/detail.html
+++ b/detail.html
@@ -58,11 +58,13 @@
             <img src="images/logo.png">
         </div>
         <div class="bottom-text">
-            <a class="download-app" href="http://www.shunshunliuxue.com/weixin/appdownload/" target="_blank"><h3>点击下载顺顺留学</h3>
+            <a class="download-app" href="http://www.shunshunliuxue.com/weixin/appdownload/" target="_blank"><h3>
+                点击下载顺顺留学</h3>
                 <h4>新一代人的选择</h4></a>
         </div>
         <div class="bottom-x">
-            <a id="main-break" href="javascript:void(0);" onclick="document.getElementsByClassName('bottom-window')[0].style.display='none';">
+            <a id="main-break" href="javascript:void(0);"
+               onclick="document.getElementsByClassName('bottom-window')[0].style.display='none';">
                 <img id='img' src="http://api.shunshunliuxue.com/static/css/default/img/client/x.png">
             </a>
         </div>
@@ -70,19 +72,17 @@
 
 </div>
 <script>
-    window.onload = function () {
-        function is_weixin(){
-            var ua = navigator.userAgent.toLowerCase();
-            if(ua.match(/MicroMessenger/i)=="micromessenger") {
-                return true;
-            } else {
-                return false;
-            }
+    function is_weixin() {
+        var ua = navigator.userAgent.toLowerCase();
+        if (ua.match(/MicroMessenger/i) == "micromessenger") {
+            return true;
+        } else {
+            return false;
         }
-        var downloadBanner = document.getElementsByClassName('bottom-window')[0];
-        if(!is_weixin()){
-            downloadBanner.style.display = 'none';
-        }
+    }
+    var downloadBanner = document.getElementsByClassName('bottom-window')[0];
+    if (!is_weixin()) {
+        downloadBanner.style.display = 'none';
     }
 </script>
 </body>
