--- a/share-wx.html
+++ b/share-wx.html
@@ -111,7 +111,7 @@ notices: 页面用在 微信 内部, 底部为二维码,其他内容和在app展
         </div>
         <div class="bottom-text">
             <a class="download-app" href="http://www.shunshunliuxue.com/weixin/appdownload/" target="_blank"><h3>点击下载顺顺留学</h3>
-                <h4>新一代人的选择</h4></a>
+                <h4>48小时留学专家学长学姐有问必答</h4></a>
         </div>
         <div class="bottom-x">
             <a id="main-break" href="javascript:void(0);" onclick="document.getElementsByClassName('bottom-window')[0].style.display='none';">
@@ -177,6 +177,19 @@ notices: 页面用在 微信 内部, 底部为二维码,其他内容和在app展
         }
 
     }();
+
+    //online
+    window.addEventListener('offline', function () {
+        var img = document.createElement('img');
+        img.src = 'images/offline.png';
+        img.className = 'offline';
+        var offlineTips = document.createElement('div');
+        offlineTips.className = 'offline-tips';
+        offlineTips.innerHTML = '网络异常,请检查网络重试!';
+        document.body.innerHTML = '';
+        document.body.appendChild(offlineTips);
+        document.body.appendChild(img);
+    });
 </script>
 </body>
 </html>
