--- a/share-wx.html
+++ b/share-wx.html
@@ -105,17 +105,20 @@ notices: 页面用在 微信 内部, 底部为二维码,其他内容和在app展
         <img src="images/QR.png"/>
     </div>
 
-    <div class="bottom-window">
-        <div class="bottom-img">
+    <div class="bottom-window" style="background: #f4f4f4;">
+        <div class="bottom-img" style="padding: 0.8rem 2% 0 4%!important;;">
             <img src="images/logo.png">
         </div>
         <div class="bottom-text">
-            <a class="download-app" href="http://www.shunshunliuxue.com/weixin/appdownload/" target="_blank"><h3>点击下载顺顺留学</h3>
-                <h4>48小时留学专家学长学姐有问必答</h4></a>
+            <a class="download-app" href="http://www.shunshunliuxue.com/weixin/appdownload/" target="_blank" style="color:#e63214;"><h3>24小时有问必答</h3>
+                <h4>顺顺留学</h4></a>
         </div>
+        <a href="http://www.shunshunliuxue.com/weixin/appdownload/" target="_blank">
+            <img src="images/download.png" style="position: absolute;top:20px;right:9%;height:40px;z-index:999"/>
+        </a>
         <div class="bottom-x">
             <a id="main-break" href="javascript:void(0);" onclick="document.getElementsByClassName('bottom-window')[0].style.display='none';">
-                <img id='img' src="http://api.shunshunliuxue.com/static/css/default/img/client/x.png">
+                <img id='img' src="images/close.png">
             </a>
         </div>
     </div>
